# SimplyBot

./: .gitignore  README.md  env.example  insomnia_collection.json  mkdocs.yml  openrouter_models.md  pyproject.toml  requirements-docs.txt  requirements.txt
docs/: api-reference.md  architecture.md  development.md  index.md  installation.md  usage.md
simplybot/: __init__.py  config.py  main.py  models.py
simplybot/gui/: streamlit_app.py
simplybot/services/: audio_service.py  document_processor.py  llm_service.py  vector_store.py
simplybot/tests/: test_conversation_summary.py  test_endpoints.py  test_openai.py  test_openai_embeddings.py  test_qdrant.py  test_qdrant_put_doc.py
